trying to fix weird logo stretching

--- a/src/App.scss
+++ b/src/App.scss
@@ -386,7 +386,7 @@ hr {
   .registry-logo {
     height: auto;
     max-height: 80px;
-    width: 80%;
+    width: auto;
   }
 }
 
